kubernetes/testing/adguard/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: adguard
  labels:
    app.kubernetes.io/name: adguard
    app.kubernetes.io/instance: adguard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: adguard
      app.kubernetes.io/instance: adguard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguard
        app.kubernetes.io/instance: adguard
    spec:
      containers:
        - name: adguard
          image: adguard/adguardhome:v0.107.71
          args:
            - --no-check-update
            - --web-addr
            - 0.0.0.0:80
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /opt/adguardhome/conf
            - name: work
              mountPath: /opt/adguardhome/work
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: adguard-config
        - name: work
          persistentVolumeClaim:
            claimName: adguard-work
