kubernetes/testing/adguard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
  labels:
    app.kubernetes.io/name: adguard
    app.kubernetes.io/instance: adguard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adguard
    app.kubernetes.io/instance: adguard
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 53
      targetPort: dns-tcp
      protocol: TCP
      name: dns-tcp
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
