kubernetes/testing/adguard/ingressroute-tcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: adguard-dns
  namespace: adguard
spec:
  entryPoints:
    - dns
  routes:
    - match: HostSNI(`*`)
      services:
        - name: adguard
          port: 53
